# MDR1206_SSP_RGB

./: CMakeLists.txt  MDR1206FI.svd
cmake/: gcc-riscv-none-elf.cmake
src/: common.h  main.cpp  rgb.c  rgb.h
